@startuml iam

hide empty members

class IAMAdministrator {
    +regionalize_role()
}
note bottom: r = role->clone()

class RoleRepository {
    +retrieve_names()
    +retrieve()
}

abstract class Role {
    +set_require_mfa()
    +set_max_session_minutes()
    +set_region()
    +clone()
}

class ApplicationRole {
    +set_entitlements()
    +clone()
}

class InfrastructureRole {
    +set_resource_actions()
    +clone()
}

IAMAdministrator --> RoleRepository
IAMAdministrator --> Role: prototype

ApplicationRole --|> Role
InfrastructureRole --|> Role



@enduml